--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.14.1",
     "prettier": "^2.8.8",
+    "sass": "^1.63.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-electron": "^0.11.2",
