--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@electron-toolkit/preload": "^2.0.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vscode/codicons": "^0.0.33",
     "electron": "^25.1.0",
     "eslint": "^8.42.0",
     "eslint-plugin-vue": "^9.14.1",
